--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
       context: .
       dockerfile: Dockerfile
     image: app-desafio-automy
-    ports:
-      - "3000:3000"
+    stdin_open: true
+    tty: true
