--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,4 @@
-# version: '3.8'
 
-# services:
-#   app:
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     image: app-desafio-automy
-#     stdin_open: true
-#     tty: true
 
 services:
   app:
@@ -17,7 +8,7 @@ services:
     stdin_open: true
     tty: true
     env_file:
-      - .env  # 👈 isso aqui garante que o .env será carregado no container
+      - .env 
 
   test:
     build:
